--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,5 @@ lib_deps =
    claws/BH1750 @ 1.1.4
    adafruit/Adafruit Unified Sensor @ 1.1.4
    adafruit/DHT sensor library @ 1.4.0
+   lennarthennigs/Button2 @ ^1.4.1
+
