--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,20 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-
-monitor_speed=115200
-
-lib_deps =
-   bblanchon/ArduinoJson @ 6.17.0
-   arduino-libraries/ArduinoHttpClient @ 0.4.0
-   ldab/esp32_ftpclient @ 0.1.3
-   claws/BH1750 @ 1.1.4
-   adafruit/Adafruit Unified Sensor @ 1.1.4
-   adafruit/DHT sensor library @ 1.4.0
-   lennarthennigs/Button2 @ ^1.4.1
+monitor_speed = 115200
+lib_deps = 
+	bblanchon/ArduinoJson @ 6.17.0
+	arduino-libraries/ArduinoHttpClient @ 0.4.0
+	ldab/esp32_ftpclient @ 0.1.3
+	claws/BH1750 @ 1.1.4
+	adafruit/Adafruit Unified Sensor @ 1.1.4
+	adafruit/DHT sensor library @ 1.4.0
+	lennarthennigs/Button2 @ ^1.5.1
+ 	me-no-dev/ESP Async WebServer @ ^1.2.3
+ 	ayushsharma82/ESP-DASH@^3.0.2
+ 	me-no-dev/AsyncTCP@^1.1.1
+;	me-no-dev/AsyncTCP @ ^1.0.0
+;	ayushsharma82/ESP-DASH @ ^2.2.4
+;	me-no-dev/ESPAsyncTCP @ ^1.2.0
+;	me-no-dev/ESP Async WebServer @ ^1.2.0
 
